# jxlviewer

./: .editorconfig  .gitmodules  LICENSE-MIT  README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
.github/workflows/: android.yml  debug.yml  fastlane.yml  release.yml
app/: CHANGELOG.md  build.gradle  build.gradle.kts
app/src/androidTest/java/fr/oupson/jxlviewer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/includes/jxl/: version.h
app/src/main/java/fr/oupson/jxlviewer/: JxlApplication.java  JxlApplication.kt  JxlDecoder.java  MainActivity.kt  ViewerActivity.kt
app/src/main/java/fr/oupson/jxlviewer/activity/: MainActivity.kt
app/src/main/java/fr/oupson/jxlviewer/di/module/: GalleryModule.kt
app/src/main/java/fr/oupson/jxlviewer/repository/: MediaStoreRepository.kt
app/src/main/java/fr/oupson/jxlviewer/repository/impl/: MediaStoreRepositoryImpl.kt
app/src/main/java/fr/oupson/jxlviewer/ui/loading/: JxlLoader.kt  JxlPainter.kt  ResizePainter.kt
app/src/main/java/fr/oupson/jxlviewer/ui/model/: BucketListViewModel.kt  ViewerViewModel.kt
app/src/main/java/fr/oupson/jxlviewer/ui/nav/: NavKey.kt
app/src/main/java/fr/oupson/jxlviewer/ui/screen/: MainScreen.kt  MediaStoreScreen.kt  ViewerScreen.kt
app/src/main/java/fr/oupson/jxlviewer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/fr/oupson/jxlviewer/util/: BitmapUtil.kt
app/src/main/java/fr/oupson/jxlviewer/worker/: ExportWorker.kt
app/src/main/res/drawable/: arrow_back.xml  baseline_error_outline_24.xml  broken_image.xml  check.xml  file_open.xml  ic_launcher_foreground.xml  save_as.xml  share.xml
app/src/main/res/layout/: activity_main.xml  activity_view.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/fr/oupson/jxlviewer/: ExampleUnitTest.kt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libjxl/: build.gradle  build.gradle.kts  consumer-rules.pro
libjxl/src/androidTest/assets/: ferris.jxl
libjxl/src/androidTest/java/fr/oupson/libjxl/: ExampleInstrumentedTest.kt  JxlDecodeAndroidUnitTest.java
libjxl/src/main/cpp/: CMakeLists.txt  libjxlreader.map.txt  native-lib.cpp
libjxl/src/main/cpp/includes/: Decoder.h  Exception.h  FileDescriptorInputSource.h  ICCProfile.h  ImageOutCallbackData.h  InputSource.h  JniInputStream.h  Options.h  jxlviewer_consts.h
libjxl/src/main/cpp/src/: Decoder.cpp  Exception.cpp  ICCProfile.cpp
libjxl/src/main/java/fr/oupson/libjxl/: JxlDecoder.java
libjxl/src/main/java/fr/oupson/libjxl/exceptions/: ConfigException.java  DecodeError.java
libjxl/src/test/java/fr/oupson/libjxl/: ExampleUnitTest.kt
libjxl_microbenchmark/: build.gradle  build.gradle.kts
libjxl_microbenchmark/src/androidTest/: AndroidManifest.xml
libjxl_microbenchmark/src/androidTest/assets/: didi.jxl
libjxl_microbenchmark/src/androidTest/java/fr/oupson/libjxl_microbenchmark/: JxlDecoderBenchmark.java
scripts/: release.sh
